<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Contact Manager</string>

    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Phone number</string>
    <string name="contact_photo">Photo</string>
    <string name="add_contact_button">Add Contact</string>
    <string name="view_contact_button">View Contacts</string>


    <string name="lblBtn">Open Activity Demo</string>
    <string name="lblTxt">This is another activity</string>
</resources>