<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4f6bbcff">

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/"
        android:background="#fffffdfb">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/contact_name"
            android:layout_toStartOf="@+id/ib_photo"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/contact_number"
            android:layout_toStartOf="@+id/ib_photo"
            android:layout_below="@+id/et_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


        <ImageButton
            android:id="@+id/ib_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/contact_photo"
            android:src="@android:drawable/ic_menu_upload"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <Button
            android:id="@+id/btn_add"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:text="@string/add_contact_button"
        android:background="@android:drawable/bottom_bar"
        android:layout_above="@+id/btn_list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/view_contact_button"
        android:background="@android:drawable/bottom_bar"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />

    <Button
        android:id="@+id/btn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="View Photos in New Activity"
        android:layout_below="@+id/btn_list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:drawable/bottom_bar"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
